--- a/style.css
+++ b/style.css
@@ -58,6 +58,7 @@ input {
 .city-image {
   margin: 0 auto;
   width: 200px;
+  display: none;
 }
 
 .weather-icon {
@@ -73,6 +74,7 @@ input {
 .condition {
   font-size: 1.5rem;
   margin: 0;
+  font-weight: 300;
 }
 
 .date {
